--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://cloudducoeur.org/'
+baseURL: 'https://doc.aucoeurdu.cloud/'
 languageCode: 'fr-fr'
 title: 'Cloud du Coeur'
 theme: "hextra"
