--- a/hugo.yaml
+++ b/hugo.yaml
@@ -12,7 +12,7 @@ params:
       path: img/logo.png
       width: 175
   footer:
-      displayCopyright: false
+      displayCopyright: true
       displayPoweredBy: false
       width: normal
 
