--- a/hugo.yaml
+++ b/hugo.yaml
@@ -62,6 +62,11 @@ menu:
       url: "https://cloudducoeur.org"
       params:
         icon: globe-alt
+    - name: Console
+      weight: 8
+      url: "https://console.aucoeurdu.cloud"
+      params:
+        icon: home
     - name: Search
       weight: 6
       params:
