fix: update docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 services:
   hugo:
     container_name: hugo
-    image: "peaceiris/hugo:v0.147.3-mod"
+    image: "hugomods/hugo:dart-sass-go-git-0.147.5"
     ports:
       - 127.0.0.1:1313:1313
     volumes:
       - ${PWD}:/src
+    working_dir: /src
     command:
       - server
       - --bind=0.0.0.0
